# ChatServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  main.cc
src/: CMakeLists.txt  etcd.cc  main.cc
src/examples/: CMakeLists.txt  client.cc  discovery.cc  main.proto  registry.cc  server.cc
src/include/: Registry.cc  Registry.h  etcd.h  log.hpp
src/tests/: CMakeLists.txt  etcd_test.cc
